--- a/.github/workflows/autoupdate.yml
+++ b/.github/workflows/autoupdate.yml
@@ -6,8 +6,8 @@ on:
       - main
     paths-ignore:
       - 'bin/**'
-  schedule:
-    - cron: '0 0 * * 0'
+  #schedule:
+    #- cron: '0 0 * * 0'
 
 jobs:
   build:
